// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark Nav List 1`] = `
<Nav
  className="test=nav-class"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav test=nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-2"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      className="test-nav-list-class"
    >
      <ul
        className="pf-c-nav__list test-nav-list-class"
        onScroll={[Function]}
      >
        <NavItem
          className="test-nav-item-class"
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-5"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-6"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-7"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-8"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Default Nav List - Trigger item active update 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-1"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-2"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-3"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-4"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Default Nav List 1`] = `
<Nav
  className="test=nav-class"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav test=nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      className="test-nav-list-class"
    >
      <ul
        className="pf-c-nav__list test-nav-list-class"
        onScroll={[Function]}
      >
        <NavItem
          className="test-nav-item-class"
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-1"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-2"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-3"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-4"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List - Trigger toggle 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-2"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className="expandable-group"
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={true}
          srText=""
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable pf-m-expanded expandable-group"
            data-ouia-component-id="OUIA-Generated-NavExpandable-1"
            data-ouia-component-type="PF4/NavExpandable"
            data-ouia-safe={true}
          >
            <button
              aria-expanded={true}
              className="pf-c-nav__link"
              id="grp-1"
              onClick={[Function]}
              tabIndex={null}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={null}
            >
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-5"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-6"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-7"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-8"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-4"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText=""
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable"
            data-ouia-component-id="OUIA-Generated-NavExpandable-1"
            data-ouia-component-type="PF4/NavExpandable"
            data-ouia-safe={true}
          >
            <button
              aria-expanded={false}
              className="pf-c-nav__link"
              id="grp-1"
              onClick={[Function]}
              tabIndex={null}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={true}
            >
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-13"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-14"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-15"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-16"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List with aria label 1`] = `
<Nav
  aria-label="Test"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-6"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText="Section 1 - Example sub-navigation"
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable"
            data-ouia-component-id="OUIA-Generated-NavExpandable-3"
            data-ouia-component-type="PF4/NavExpandable"
            data-ouia-safe={true}
          >
            <button
              aria-expanded={false}
              className="pf-c-nav__link"
              id={null}
              onClick={[Function]}
              tabIndex={null}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={true}
            >
              <h2
                className="pf-u-screen-reader"
                id="grp-1"
              >
                Section 1 - Example sub-navigation
              </h2>
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-21"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-22"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-23"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                    data-ouia-component-id="OUIA-Generated-NavItem-24"
                    data-ouia-component-type="PF4/NavItem"
                    data-ouia-safe={true}
                    onMouseOver={[Function]}
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                      tabIndex={null}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Horizontal Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
  variant="horizontal"
>
  <nav
    aria-label="Global"
    className="pf-c-nav pf-m-horizontal"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <button
        aria-label="Scroll left"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleLeftIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </AngleLeftIcon>
      </button>
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-33"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-34"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-35"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-36"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
      <button
        aria-label="Scroll right"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </AngleRightIcon>
      </button>
    </NavList>
  </nav>
</Nav>
`;

exports[`Horizontal SubNav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
  variant="horizontal-subnav"
>
  <nav
    aria-label="Global"
    className="pf-c-nav pf-m-horizontal-subnav"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <button
        aria-label="Scroll left"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleLeftIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </AngleLeftIcon>
      </button>
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-37"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-38"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-39"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-40"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
      <button
        aria-label="Scroll right"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </AngleRightIcon>
      </button>
    </NavList>
  </nav>
</Nav>
`;

exports[`Nav Grouped List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-7"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavGroup
      id="grp-1"
      title="Section 1"
    >
      <section
        aria-labelledby="grp-1"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-1"
        >
          Section 1
        </h2>
        <ul
          className="pf-c-nav__list"
        >
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <NavItem
                key="section1_#link1"
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-25"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link2"
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-26"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link3"
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-27"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link4"
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-28"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
    <NavGroup
      id="grp-2"
      title="Section 2"
    >
      <section
        aria-labelledby="grp-2"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-2"
        >
          Section 2
        </h2>
        <ul
          className="pf-c-nav__list"
        >
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <NavItem
                key="section2_#link1"
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-29"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link2"
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-30"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link3"
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-31"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link4"
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-32"
                  data-ouia-component-type="PF4/NavItem"
                  data-ouia-safe={true}
                  onMouseOver={[Function]}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
  </nav>
</Nav>
`;

exports[`Nav List with custom item nodes 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
  variant="tertiary"
>
  <nav
    aria-label="Local"
    className="pf-c-nav pf-m-horizontal pf-m-tertiary"
    data-ouia-component-id="OUIA-Generated-Nav-tertiary-2"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <button
        aria-label="Scroll left"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleLeftIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </AngleLeftIcon>
      </button>
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          className="test-nav-item-class"
          to="/components/nav#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
            data-ouia-component-id="OUIA-Generated-NavItem-45"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <div
              aria-current={null}
              className="pf-c-nav__link my-custom-node"
              onClick={[Function]}
              tabIndex={null}
            >
              My custom node
            </div>
          </li>
        </NavItem>
      </ul>
      <button
        aria-label="Scroll right"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </AngleRightIcon>
      </button>
    </NavList>
  </nav>
</Nav>
`;

exports[`Simple Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-3"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-9"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-10"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-11"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-12"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Tertiary Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
  variant="tertiary"
>
  <nav
    aria-label="Local"
    className="pf-c-nav pf-m-horizontal pf-m-tertiary"
    data-ouia-component-id="OUIA-Generated-Nav-tertiary-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <button
        aria-label="Scroll left"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleLeftIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            />
          </svg>
        </AngleLeftIcon>
      </button>
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-41"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-42"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-43"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-44"
            data-ouia-component-type="PF4/NavItem"
            data-ouia-safe={true}
            onMouseOver={[Function]}
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
              tabIndex={null}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
      <button
        aria-label="Scroll right"
        className="pf-c-nav__scroll-button"
        disabled={true}
        onClick={[Function]}
        tabIndex={null}
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </AngleRightIcon>
      </button>
    </NavList>
  </nav>
</Nav>
`;
